// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should render 1`] = `
<form
  className="slider"
>
  <label
    className="slider-label"
  />
  <input
    className="slider-input"
    onChange={[Function]}
    step="1"
    type="range"
    value={0}
  />
  <div
    className="slider-value"
  >
    0
  </div>
</form>
`;

exports[`Slider should render with props 1`] = `
<form
  className="slider"
>
  <label
    className="slider-label"
  >
    title Test
  </label>
  <input
    className="slider-input"
    max={200}
    min={0}
    onChange={[Function]}
    step="1"
    type="range"
    value={100}
  />
  <div
    className="slider-value"
  >
    100
  </div>
</form>
`;
